<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitulo"
        android:textSize="25dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_margin="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:textSize="18dp"
            android:text="@string/strPeso" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:id="@+id/peso"
            android:textSize="10dp"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="KG"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAltura"
            android:layout_marginLeft="35dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:id="@+id/altura"
            android:textSize="18dp"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            android:textSize="18dp"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btnCalcular"
        android:id="@+id/calcular"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textColor="#FFF"
        android:background="#00BFFF"
        android:layout_marginRight="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semValor"
        android:id="@+id/situacao"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:textColor="#FF0000"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/pessoa"
            android:id="@+id/imagemPeso"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="50dp"
            android:layout_gravity="end"
            android:id="@+id/IMC"
            />

    </LinearLayout>
    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#FFF"
        android:text="@string/btnValorReferencia"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/ValorReferncia"
        android:background="#32CD32"/>

</LinearLayout>